fix: cambiar overflow a auto en el panel de detalles del footer

--- a/src/assets/css/hg-footer.css
+++ b/src/assets/css/hg-footer.css
@@ -63,7 +63,7 @@ body.hg-footer-in-view #hg-home-row-cols .hg-home-row-cols__col.is-active {
 
 .hg-footer-details .hg-footer-details-panel {
   height: 0;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .hg-footer-details.is-open .hg-footer-details-panel {
